--- a/.github/workflows/transifex-pull.yml
+++ b/.github/workflows/transifex-pull.yml
@@ -10,20 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Install deps
-      run: yarn
-    - name: Update translations
-      run: 'node scripts/transifex.js'
-      env:
-        TRANSIFEX_TOKEN: ${{ secrets.TRANSIFEX_TOKEN }}
-    - name: Create pull request
-      uses: peter-evans/create-pull-request@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: i18n-patch
-        title: Update locale files from Transifex
-        body: >-
-          Violentmonkey updates translations from Transifex every week automatically.
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install deps
+        run: yarn
+      - name: Update translations
+        run: 'node scripts/transifex.js'
+        env:
+          TRANSIFEX_TOKEN: ${{ secrets.TRANSIFEX_TOKEN }}
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: i18n-patch
+          title: Update locale files from Transifex
+          body: >-
+            Violentmonkey updates translations from Transifex every week automatically.
 
-          If you want to help translate into your language, please visit [the transifex platform](https://www.transifex.com/projects/p/violentmonkey-nex/resource/messagesjson/).
+            If you want to help translate into your language, please visit [the transifex platform](https://www.transifex.com/projects/p/violentmonkey-nex/resource/messagesjson/).
